export interface Tag {
  id: string;
  userId: string;
  name: string;
  colorHex: string;
}
