export type Priority = 'LOW' | 'MEDIUM' | 'HIGH';
export type Difficulty = 'EASY' | 'MEDIUM' | 'HARD';
export type Frequency = 'NONE' | 'DAILY' | 'WEEKLY' | 'MONTHLY';
export type TaskStatus = 'PENDING' | 'COMPLETED' | 'FAILED' | 'SKIPPED';
